--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,11 @@ media
 
 # Backup files # 
 *.bak 
+
+# If you are using PyCharm # 
+# User-specific stuff
+.idea/**/workspace.xml
+.idea/**/tasks.xml
+.idea/**/usage.statistics.xml
+.idea/**/dictionaries
+.idea/**/shelf
